[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Projectile/ProjectileR.gd" type="Script" id=1]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="CircleShape2D" id=2]

[node name="ProjectileR" type="RigidBody2D"]
collision_layer = 8
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="LifeTime" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_ProjectileR_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
